--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'RMChatApp'
+include ':react-native-rabbitmq'
+project(':react-native-rabbitmq').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-rabbitmq/android')
 
 include ':app'
