--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.4",
 		"react-native-easy-grid": "^0.1.15",
-		"react-native-rabbitmq": "https://github.com/kreactnative/react-native-rabbitmq.git"
+		"react-native-rabbitmq": "https://github.com/kreactnative/react-native-rabbitmq.git",
+		"rn-viewpager": "^1.2.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
