--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-native-device-info": "^0.10.2",
 		"react-native-easy-grid": "^0.1.15",
 		"react-native-gifted-chat": "^0.2.5",
+		"react-native-gifted-messenger": "^0.1.4",
 		"react-native-rabbitmq": "https://github.com/kreactnative/react-native-rabbitmq.git",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.2",
