update chat and logo app

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"android": "node node_modules/react-native/local-cli/cli.js run-android",
 		"clean": "cd android && gradlew clean && cd ..",
 		"dev": "npm run clean && npm run android",
+		"release": "cd android && gradlew assembleRelease && cd ..",
 		"test": "jest"
 	},
 	"dependencies": {
